--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="style.css">Css</a>
         </header>
         
-        <nav>
+        <nav style="text-decoration:none">
             <ul>
                 <li><a href="">Home</a>
                 </li>
@@ -23,14 +23,14 @@
                 </li>
             </ul>
         </nav>
-        <div class='content'>
+        <div class='content' width="70%">
             <section id="videoText">
             <header class="SectionHeader">
          <h2>Recent News</h2>
             </header>
             <article>
                  <h3 class ="ArticleHeader">Super Mario Odyssey, now on Switch!</h3>
-                <video poster="http://mario.nintendo.com/assets/img/home/thumb-musical_2x.jpg" controls autoplay loop>
+                <video poster="http://mario.nintendo.com/assets/img/home/thumb-musical_2x.jpg" controls autoplay loop width="100%" height="auto">
                     <source src="http://mario.nintendo.com/assets/media/home/musical-video.mp4">
                 </video>
                 <p>To see the rest of the video, visit <a href="http://mario.nintendo.com/">The Official Home of Mario</a>
@@ -69,7 +69,7 @@
         </div>
        
 
-        <aside><div class="classsection">
+        <aside><div class="consoleSection">
              <h3>Hit Mario Games by Console</h3>
             <ul>
                 <li class="listheader">Arcade</li>
@@ -83,7 +83,7 @@
                     <li>Super Mario Bros 3</li>
                 </ul>
             </div>
-                   <div class="classsection">
+                   <div class="consoleSection">
                 <li class="listheader">Gameboy</li>
                 <ul>
                     <li>Dr. Mario</li>
@@ -92,7 +92,7 @@
                     <li>Wario Land: Super Mario Land 3</li>
                 </ul>
             </div>
-            <div class="classsection">
+            <div class="consoleSection">
                 <li class="listheader" >Super Nintendo</li>
                 <ul>
                     <li>Super Mario World</li>
@@ -102,7 +102,7 @@
                     <li>Super Mario World 2: Yoshi's Island</li>
                 </ul>
             </div>
-            <div class="classsection">
+            <div class="consoleSection">
                 <li class="listheader" >Nintendo 64 </li>
                 <ul>
                     <li>Super Mario 64</li>
@@ -114,7 +114,7 @@
                     <li>Mario Party 3</li>
                 </ul>
             </div>
-            <div class="classsection">
+            <div class="consoleSection">
                 <li class="listheader" >Gamecube</li>
                 <ul>
                     <li>Super Mario Sunshine</li>
@@ -127,7 +127,7 @@
                     <li>Mario Party 7</li>
                  </ul>
            </div>
-            <div class="classsection" >
+            <div class="consoleSection" >
                 <li class="listheader" >Gameboy Advance</li>
                 <ul>
                     <li>Mario Kart: Super Circuit</li>
@@ -139,7 +139,7 @@
                     <li>Mario Party Advance</li>
                 </ul>
             </div>
-            <div class="classsection" >
+            <div class="consoleSection" >
                 <li class="listheader" >Nintendo DS</li>
                 <ul>
                     <li>New Super Mario Bros.</li>
@@ -151,7 +151,7 @@
                     <li>Mario Party Advance</li>
                 </ul>
             </div>
-            <div class="classsection">
+            <div class="consoleSection">
                 <li class="listheader">Wii</li>
                 <ul>
                     <li>Super Paper Mario</li>
@@ -164,7 +164,7 @@
                     <li>Mario Party 9</li>
                 </ul>
             </div>
-            <div class="classsection">
+            <div class="consoleSection">
                 <li class="listheader" >Nintendo 3DS</li>
                 <ul>
                     <li>Super Mario 3D Land</li>
@@ -178,7 +178,7 @@
                     <li>Mario Party: Star Rush</li>
                 </ul>
             </div>
-            <div class="classsection" >
+            <div class="consoleSection" >
                 <li class="listheader">Wii U</li>
                 <ul>
                     <li>New Super Mario Bros. U</li>
@@ -188,7 +188,7 @@
                     <li>Mario Party 10</li>
                 </ul>
             </div>
-            <div class="classsection">
+            <div class="consoleSection">
                 <li class="listheader">Switch</li>
                 <ul>
                     <li>Mario Kart 8 Deluxe</li>
