--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
     <head>
-        <title>Mario Madness</title>     
+        <title>Mario Madness</title> 
+        <link rel="stylesheet" type="text/css" href="style.css"></link>    
     </head>
 
     <body>
@@ -10,7 +11,7 @@
             <img src="http://jlaw21.github.io/Resources/mario.png">
             <h1>Mario Madness</h1>
             <p>A place to celebrate Mario, the Royal Plumber, King of Gaming.</p>
-            <a href="style.css">Css</a>
+            
         </header>
         
         <nav style="text-decoration:none">
